@@ -78,6 +78,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
     protected boolean organizationsEnabled;
     protected boolean adminPermissionsEnabled;
     protected boolean verifiableCredentialsEnabled;
+    protected boolean scimEnabled;
     //--- brute force settings
     protected boolean bruteForceProtected;
     protected boolean permanentLockout;
@@ -176,7 +177,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
 
     protected Map<String, Map<String,String>> realmLocalizationTexts;
 
-    public CachedRealm(Long revision, RealmModel model) {
+    public CachedRealm(long revision, RealmModel model) {
         super(revision, model.getId());
         name = model.getName();
         displayName = model.getDisplayName();
@@ -195,6 +196,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
         organizationsEnabled = model.isOrganizationsEnabled();
         adminPermissionsEnabled = model.isAdminPermissionsEnabled();
         verifiableCredentialsEnabled = model.isVerifiableCredentialsEnabled();
+        scimEnabled = model.isScimEnabled();
         //--- brute force settings
         bruteForceProtected = model.isBruteForceProtected();
         permanentLockout = model.isPermanentLockout();
@@ -243,7 +245,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
         emailTheme = model.getEmailTheme();
 
         requiredCredentials = model.getRequiredCredentialsStream().collect(Collectors.toList());
-        userActionTokenLifespans = Collections.unmodifiableMap(new HashMap<>(model.getUserActionTokenLifespans()));
+        userActionTokenLifespans = Map.copyOf(model.getUserActionTokenLifespans());
 
         smtpConfig = model.getSmtpConfig();
         browserSecurityHeaders = model.getBrowserSecurityHeaders();
@@ -288,11 +290,11 @@ public class CachedRealm extends AbstractExtendableRevisioned {
 
         authenticatorConfigs = model.getAuthenticatorConfigsStream()
                 .collect(Collectors.toMap(AuthenticatorConfigModel::getId, Function.identity()));
-        List<RequiredActionConfigModel> requiredActionConfigsList = model.getRequiredActionConfigsStream().collect(Collectors.toList());
-        for (RequiredActionConfigModel requiredActionConfig : requiredActionConfigsList) {
-            requiredActionProviderConfigs.put(requiredActionConfig.getId(), requiredActionConfig);
-            requiredActionProviderConfigsByAlias.put(requiredActionConfig.getAlias(), requiredActionConfig);
-        }
+        model.getRequiredActionConfigsStream()
+                .forEach(requiredActionConfig -> {
+                    requiredActionProviderConfigs.put(requiredActionConfig.getId(), requiredActionConfig);
+                    requiredActionProviderConfigsByAlias.put(requiredActionConfig.getAlias(), requiredActionConfig);
+                });
 
         requiredActionProviderList = model.getRequiredActionProvidersStream().collect(Collectors.toList());
         for (RequiredActionProviderModel action : requiredActionProviderList) {
@@ -316,7 +318,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
         model.getComponentsStream().forEach(component ->
             componentsByParent.add(component.getParentId(), component)
         );
-        components = model.getComponentsStream().collect(Collectors.toMap(component -> component.getId(), Function.identity()));
+        components = model.getComponentsStream().collect(Collectors.toMap(ComponentModel::getId, Function.identity()));
 
         try {
             attributes = model.getAttributes();
@@ -528,11 +530,11 @@ public class CachedRealm extends AbstractExtendableRevisioned {
     }
 
     public CibaConfig getCibaConfig(Supplier<RealmModel> modelSupplier) {
-        return new CibaConfig(modelSupplier.get());
+        return CibaConfig.fromCache(modelSupplier, Collections.unmodifiableMap(attributes));
     }
 
     public ParConfig getParConfig(Supplier<RealmModel> modelSupplier) {
-        return new ParConfig(modelSupplier.get());
+        return ParConfig.fromCache(modelSupplier, Collections.unmodifiableMap(attributes));
     }
 
     public int getActionTokenGeneratedByAdminLifespan() {
@@ -764,5 +766,9 @@ public class CachedRealm extends AbstractExtendableRevisioned {
 
     public Map<String, RequiredActionConfigModel> getRequiredActionProviderConfigs() {
         return requiredActionProviderConfigs;
+    }
+
+    public boolean isScimEnabled() {
+        return scimEnabled;
     }
 }
